# todo-cli

./: .gitignore  CMakeLists.txt  README.md
include/: arg_parser.hpp  query_client.hpp  types.hpp
src/: arg_parser.cpp  main.cpp  query_client.cpp  types.cpp
